docs: bump font-size on mobile to fix small safari.

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -106,6 +106,13 @@ iframe {
 .VPFeature .details {
   font-weight: 600 !important;
 }
+.VPFeature .details,
+.VPButton.medium,
+.link-btn,
+.message,
+.copywrite {
+  font-size: 14.5px !important;
+}
 
 .product-icon {
   width: 84px;
@@ -140,7 +147,7 @@ iframe {
     border-radius: 20px;
     padding: 0 15px;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 14.5px;
     color: var(--vp-c-gray-3) !important;
     border-color: var(--vp-button-brand-border);
     background-color: var(--vp-button-brand-bg);
